--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: go
 
 go:
-  - 1.9.x
   - 1.10.x
+  - 1.11.x
   - tip
+os:
+  - osx
+
+before_install:
+  - go get github.com/golang/dep/cmd/dep
+install:
+  - $GOPATH/bin/dep ensure
 
 script:
- - go test -v -cover ./...
+ - make test
