--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: go
 
 go:
-  - 1.10.x
-  - 1.11.x
+  - 1.14.x
   - tip
 os:
   - osx
 
-before_install:
-  - go get github.com/golang/dep/cmd/dep
 install:
-  - $GOPATH/bin/dep ensure
+  - go mod download
 
 script:
  - make test
